<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>forge</artifactId>
        <groupId>forge</groupId>
        <version>1.6.59-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>forge-adventure</artifactId>
    <packaging>jar</packaging>
    <name>Forge Adventure</name>
    <repositories>
        <repository>
            <id>gdx-nightlies</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>
    <build>
        <sourceDirectory>src/main/java</sourceDirectory>
        <resources>
            <resource>
                <directory>${project.basedir}</directory>
                <includes>
                    <include>**/*.vert</include>
                    <include>**/*.frag</include>
                    <include>**/title_bg_lq.png</include>
                    <include>**/transition.png</include>
                    <include>**/adv_bg_texture.jpg</include>
                    <include>**/adv_bg_splash.png</include>
                    <include>**/bg_splash.png</include>
                    <include>**/bg_texture.jpg</include>
                    <include>**/font1.ttf</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>

            <plugin>
                    <groupId>com.akathist.maven.plugins.launch4j</groupId>
                    <artifactId>launch4j-maven-plugin</artifactId>
                    <version>1.7.25</version>
                    <executions>
                        <execution>
                            <id>l4j-adv</id>
                            <phase>package</phase>
                            <goals>
                                <goal>launch4j</goal>
                            </goals>
                            <configuration>
                                <headerType>gui</headerType>
                                <outfile>${project.build.directory}/forge-adventure-editor-java8.exe</outfile>
                                <jar>${project.build.finalName}-jar-with-dependencies.jar</jar>
                                <dontWrapJar>true</dontWrapJar>
                                <errTitle>forge</errTitle>
                                <icon>src/main/config/forge-adventure-editor.ico</icon>
                                <classPath>
                                    <mainClass>forge.adventure.Main</mainClass>
                                    <addDependencies>false</addDependencies>
                                    <preCp>anything</preCp>
                                </classPath>
                                <jre>
                                    <minVersion>1.8.0</minVersion>
                                    <maxHeapSize>4096</maxHeapSize>
                                    <opts>
                                        <opt>-Dfile.encoding=UTF-8</opt>
                                    </opts>
                                </jre>
                                <versionInfo>
                                    <fileVersion>
                                        1.0.0.0
                                    </fileVersion>
                                    <txtFileVersion>
                                        1.0.0.0
                                    </txtFileVersion>
                                    <fileDescription>Forge</fileDescription>
                                    <copyright>Forge</copyright>
                                    <productVersion>
                                        1.0.0.0
                                    </productVersion>
                                    <txtProductVersion>
                                        1.0.0.0
                                    </txtProductVersion>
                                    <productName>forge-adventure-editor</productName>
                                    <internalName>forge-adventure-editor</internalName>
                                    <originalFilename>forge-adventure-editor-java8.exe</originalFilename>
                                </versionInfo>
                            </configuration>
                        </execution>
                        <!--extra-->
                        <execution>
                            <id>l4j-adv2</id>
                            <phase>package</phase>
                            <goals>
                                <goal>launch4j</goal>
                            </goals>
                            <configuration>
                                <headerType>gui</headerType>
                                <outfile>${project.build.directory}/forge-adventure-editor.exe</outfile>
                                <jar>${project.build.finalName}-jar-with-dependencies.jar</jar>
                                <dontWrapJar>true</dontWrapJar>
                                <errTitle>forge</errTitle>
                                <downloadUrl>https://www.oracle.com/java/technologies/downloads/</downloadUrl>
                                <icon>src/main/config/forge-adventure-editor.ico</icon>
                                <classPath>
                                    <mainClass>forge.adventure.Main</mainClass>
                                    <addDependencies>false</addDependencies>
                                    <preCp>anything</preCp>
                                </classPath>
                                <jre>
                                    <minVersion>11.0.1</minVersion>
                                    <jdkPreference>jdkOnly</jdkPreference>
                                    <maxHeapSize>4096</maxHeapSize>
                                    <opts>
                                        <opt>-Dfile.encoding=UTF-8</opt>
                                        <opt>--add-opens java.base/java.lang=ALL-UNNAMED</opt>
                                        <opt>--add-opens java.base/java.math=ALL-UNNAMED</opt>
                                        <opt>--add-opens java.base/jdk.internal.misc=ALL-UNNAMED</opt>
                                        <opt>--add-opens java.base/java.nio=ALL-UNNAMED</opt>
                                        <opt>--add-opens=java.base/sun.nio.ch=ALL-UNNAMED</opt>
                                        <opt>--add-opens java.base/java.util=ALL-UNNAMED</opt>
                                        <opt>--add-opens java.base/java.lang.reflect=ALL-UNNAMED</opt>
                                        <opt>--add-opens java.base/java.text=ALL-UNNAMED</opt>
                                        <opt>--add-opens java.desktop/java.awt=ALL-UNNAMED</opt>
                                        <opt>--add-opens java.desktop/java.awt.font=ALL-UNNAMED</opt>
                                        <opt>--add-opens java.desktop/java.awt.image=ALL-UNNAMED</opt>
                                        <opt>--add-opens java.desktop/java.awt.color=ALL-UNNAMED</opt>
                                        <opt>--add-opens java.desktop/sun.awt.image=ALL-UNNAMED</opt>
                                        <opt>--add-opens java.desktop/javax.swing=ALL-UNNAMED</opt>
                                        <opt>--add-opens java.desktop/javax.swing.border=ALL-UNNAMED</opt>
                                        <opt>--add-opens java.desktop/javax.swing.event=ALL-UNNAMED</opt>
                                        <opt>--add-opens java.desktop/sun.swing=ALL-UNNAMED</opt>
                                        <opt>--add-opens java.desktop/java.beans=ALL-UNNAMED</opt>
                                        <opt>--add-opens java.base/java.util.concurrent=ALL-UNNAMED</opt>
                                        <opt>--add-opens java.base/java.net=ALL-UNNAMED</opt>
                                        <opt>-Dio.netty.tryReflectionSetAccessible=true</opt>
                                    </opts>
                                </jre>
                                <versionInfo>
                                    <fileVersion>
                                        1.0.0.0
                                    </fileVersion>
                                    <txtFileVersion>
                                        1.0.0.0
                                    </txtFileVersion>
                                    <fileDescription>Forge</fileDescription>
                                    <copyright>Forge</copyright>
                                    <productVersion>
                                        1.0.0.0
                                    </productVersion>
                                    <txtProductVersion>
                                        1.0.0.0
                                    </txtProductVersion>
                                    <productName>forge-adventure-editor</productName>
                                    <internalName>forge-adventure-editor</internalName>
                                    <originalFilename>forge-adventure-editor.exe</originalFilename>
                                </versionInfo>
                            </configuration>
                        </execution>
                        <!--extra-->
                    </executions>
            </plugin>

            <plugin>
                <groupId>com.google.code.maven-replacer-plugin</groupId>
                <artifactId>replacer</artifactId>
                <version>1.5.2</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>replace</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <basedir>${basedir}/${configSourceDirectory}</basedir>
                    <filesToInclude>forge-adventure-editor.sh, forge-adventure-editor-mac.sh, forge-adventure-editor.command, forge-adventure-editor.cmd</filesToInclude>
                    <outputBasedir>${project.build.directory}</outputBasedir>
                    <outputDir>.</outputDir>
                    <regex>false</regex>
                    <replacements>
                        <replacement>
                            <token>$project.build.finalName$</token>
                            <value>${project.build.finalName}-jar-with-dependencies.jar</value>
                        </replacement>
                    </replacements>
                </configuration>
            </plugin>
            <plugin>

                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <attach>false</attach>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <archive>
                        <manifest>
                            <mainClass>forge.adventure.Main</mainClass>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                        </manifest>
                    </archive>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <!-- this is used for inheritance merges -->
                        <phase>package</phase>
                        <!-- bind to the packaging phase -->
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>com.badlogicgames.gdx</groupId>
            <artifactId>gdx</artifactId>
            <version>1.11.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.badlogicgames.gdx</groupId>
            <artifactId>gdx-platform</artifactId>
            <version>1.11.0</version>
            <classifier>natives-desktop</classifier>
        </dependency>
        <dependency>
            <groupId>com.badlogicgames.gdx</groupId>
            <artifactId>gdx-freetype</artifactId>
            <version>1.11.0</version>
        </dependency>
        <dependency>
            <groupId>com.badlogicgames.gdx</groupId>
            <artifactId>gdx-backend-lwjgl</artifactId>
            <version>1.11.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.badlogicgames.gdx</groupId>
            <artifactId>gdx-tools</artifactId>
            <version>1.11.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.badlogicgames.gdx</groupId>
            <artifactId>gdx-freetype-platform</artifactId>
            <version>1.11.0</version>
            <classifier>natives-desktop</classifier>
        </dependency>
        <dependency>
            <groupId>forge</groupId>
            <artifactId>forge-core</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>forge</groupId>
            <artifactId>forge-gui</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>forge</groupId>
            <artifactId>forge-gui-mobile</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>22.0.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.badlogicgames.gdx-controllers</groupId>
            <artifactId>gdx-controllers-desktop</artifactId>
            <version>2.2.3-SNAPSHOT</version>
        </dependency>
    </dependencies>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
    </properties>

</project>
